--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,12 +267,11 @@ body {
   }
 }
 .header__menu-back {
-  position: absolute;
+  position: fixed;
   z-index: -23;
   width: 100%;
   height: 100%;
   background: rgba(27, 27, 27, 0.8);
-  overflow: hidden;
   opacity: 0;
   -webkit-transition: all 0.4s ease 0s;
   transition: all 0.4s ease 0s;
@@ -349,6 +348,10 @@ body {
 }
 .header__nav ul li a:hover::after {
   width: 100%;
+}
+
+.header__nav-black {
+  color: #535353;
 }
 
 .header__menu-close {
