--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -101,8 +101,8 @@ body{
    align-items: center;
 }
 .header__logo {
-   width: 17.8rem;
-   height: 4.6rem;
+   width: 13.3rem;
+   height: 3.4rem;
    background-image: url(../img/header/logo.png);
    background-size: cover;
    
@@ -127,9 +127,9 @@ body{
    }
 }
 .adress-text {
-   max-width: 17.5rem;
+   max-width: 21.5rem;
    font-weight: 300;
-   font-size: 1.3rem;
+   font-size: 1.5rem;
    line-height: 150%;
    color: #535353;
 
@@ -149,7 +149,7 @@ body{
 }
 .tel__numbers {
    font-weight: 300;
-   font-size: 1.3rem;
+   font-size: 1.7rem;
    line-height: 150%;
    color: #535353;
 }
@@ -164,7 +164,7 @@ body{
 @media(max-width:992px){
    .header__logo {
       width: 13.3rem;
-      height: 3.3rem;
+      height: 3.4rem;
  
    }
    .header__info {
@@ -179,18 +179,18 @@ body{
    }
    .header__logo {
       width: 13.3rem;
-      height: 3.3rem;
+      height: 3.4rem;
  
    }
    .header__info {
-      max-width:35rem;
+      max-width:45rem;
    }
    .header__info-adress {
       column-gap: 0.8rem;
    }
    .adress-text {
-      max-width: 15.5rem;
-      font-size: 1.1rem;
+      max-width: 21.5rem;
+      font-size: 1.5rem;
    
    }
    .adress__img {
@@ -207,7 +207,7 @@ body{
     
    }
    .tel__numbers {
-      font-size: 1.1rem;
+      font-size: 1.5rem;
    }
    .header__info-menu {
       width: 2.4rem;
@@ -226,7 +226,7 @@ body{
  
    }
    .header__info {
-      max-width:15rem;
+      max-width:19rem;
    }
    .header__info-adress {
       display: none;
@@ -272,9 +272,32 @@ body{
    transform: translateX(0%);
    
 }
+.header__menu-lang {
+   margin-bottom: 15rem;
+   display: flex;
+   width: 15rem;
+   justify-content: space-between;
+ 
+   
+}
+
+.header__menu-lang-item {
+  
+   cursor: pointer;
+   color: #fff;
+   font-size: 1.4rem;
+   transition: all 0.3s ease 0s;
+   &:hover{
+      color: #535353;
+
+   }
+}
+.header__menu-lang-item-active {
+   color:#535353;
+   }
 
 .header__nav {
-   margin-bottom: 17.6rem;
+   margin-bottom: 2rem;
 
    ul{
       display: flex;
@@ -407,7 +430,7 @@ body{
    }
  
    .header__nav {
-      margin-bottom: 5rem;
+      margin-bottom: 2rem;
    
       ul{
   
@@ -417,6 +440,17 @@ body{
             font-size: 1.4rem;
          }
       }
+   }
+   .header__menu-lang {
+      margin-bottom: 13rem;
+    
+      width: 13rem;
+      
+      
+   }
+   .header__menu-lang-item {
+      font-size: 1.4rem;
+ 
    }
    .header__menu-close{
 
@@ -473,10 +507,20 @@ body{
          row-gap: 1.4rem;
          li{
 
-            font-size: 1.4rem;
+         font-size: 1.4rem;
          }
       }
    }
+   .header__menu-lang {
+      margin-bottom: 10rem;
+      width: 13rem;
+      
+      
+   }
+   .header__menu-lang-item {
+      font-size: 1.4rem;
+   }
+ 
    .header__menu-close{
 
       top: 1.4rem;
@@ -518,7 +562,7 @@ body{
 }
 /*-------------------------------------------------------------------------------*/
 main{
-   padding-top: 10rem;
+   padding-top: 9.3rem;
 }
 
 .section__top {
@@ -2351,7 +2395,7 @@ main{
 .left__column-adress {
     font-style: normal;
    font-weight: 300;
-   font-size: 1.3rem;
+   font-size: 1.5rem;
    line-height: 150%;
    color: #FFFFFF;
       transition: all 0.3s ease 0s;
@@ -2362,7 +2406,7 @@ main{
 .left__column-tel {
    font-style: normal;
    font-weight: 300;
-   font-size: 1.3rem;
+   font-size: 1.5rem;
    line-height: 150%;
    color: #FFFFFF;
    transition: all 0.3s ease 0s;
@@ -2435,12 +2479,12 @@ main{
    }
    .left__column-adress {
 
-      font-size: 1.1rem;
+      font-size: 1.4rem;
 
    }
    .left__column-tel {
 
-      font-size: 1.1rem;
+      font-size: 1.4rem;
   
    }
    .footer__central-column {
@@ -2605,4 +2649,7 @@ main{
     
    }
 
+}
+.right__lang-item-active{
+   color: #ffffff; 
 }
