--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,8 +112,8 @@ body {
 }
 
 .header__logo {
-  width: 17.8rem;
-  height: 4.6rem;
+  width: 13.3rem;
+  height: 3.4rem;
   background-image: url(../img/header/logo.png);
   background-size: cover;
 }
@@ -155,9 +155,9 @@ body {
 }
 
 .adress-text {
-  max-width: 17.5rem;
+  max-width: 21.5rem;
   font-weight: 300;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   line-height: 150%;
   color: #535353;
 }
@@ -187,7 +187,7 @@ body {
 
 .tel__numbers {
   font-weight: 300;
-  font-size: 1.3rem;
+  font-size: 1.7rem;
   line-height: 150%;
   color: #535353;
 }
@@ -204,7 +204,7 @@ body {
 @media (max-width: 992px) {
   .header__logo {
     width: 13.3rem;
-    height: 3.3rem;
+    height: 3.4rem;
   }
   .header__info {
     width: 50rem;
@@ -216,10 +216,10 @@ body {
   }
   .header__logo {
     width: 13.3rem;
-    height: 3.3rem;
+    height: 3.4rem;
   }
   .header__info {
-    max-width: 35rem;
+    max-width: 45rem;
   }
   .header__info-adress {
     -webkit-column-gap: 0.8rem;
@@ -227,8 +227,8 @@ body {
             column-gap: 0.8rem;
   }
   .adress-text {
-    max-width: 15.5rem;
-    font-size: 1.1rem;
+    max-width: 21.5rem;
+    font-size: 1.5rem;
   }
   .adress__img {
     width: 1.5rem;
@@ -244,7 +244,7 @@ body {
     height: 1.5rem;
   }
   .tel__numbers {
-    font-size: 1.1rem;
+    font-size: 1.5rem;
   }
   .header__info-menu {
     width: 2.4rem;
@@ -260,7 +260,7 @@ body {
     height: 1.9rem;
   }
   .header__info {
-    max-width: 15rem;
+    max-width: 19rem;
   }
   .header__info-adress {
     display: none;
@@ -308,8 +308,34 @@ body {
           transform: translateX(0%);
 }
 
+.header__menu-lang {
+  margin-bottom: 15rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 15rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header__menu-lang-item {
+  cursor: pointer;
+  color: #fff;
+  font-size: 1.4rem;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+.header__menu-lang-item:hover {
+  color: #535353;
+}
+
+.header__menu-lang-item-active {
+  color: #535353;
+}
+
 .header__nav {
-  margin-bottom: 17.6rem;
+  margin-bottom: 2rem;
 }
 .header__nav ul {
   display: -webkit-box;
@@ -464,12 +490,19 @@ body {
     padding: 7rem 0rem 0rem 3rem;
   }
   .header__nav {
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
   }
   .header__nav ul {
     row-gap: 1.6rem;
   }
   .header__nav ul li {
+    font-size: 1.4rem;
+  }
+  .header__menu-lang {
+    margin-bottom: 13rem;
+    width: 13rem;
+  }
+  .header__menu-lang-item {
     font-size: 1.4rem;
   }
   .header__menu-close {
@@ -516,6 +549,13 @@ body {
   .header__nav ul li {
     font-size: 1.4rem;
   }
+  .header__menu-lang {
+    margin-bottom: 10rem;
+    width: 13rem;
+  }
+  .header__menu-lang-item {
+    font-size: 1.4rem;
+  }
   .header__menu-close {
     top: 1.4rem;
     left: 20.6rem;
@@ -548,7 +588,7 @@ body {
 }
 /*-------------------------------------------------------------------------------*/
 main {
-  padding-top: 10rem;
+  padding-top: 9.3rem;
 }
 
 .section__top {
@@ -2534,7 +2574,7 @@ main {
 .left__column-adress {
   font-style: normal;
   font-weight: 300;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   line-height: 150%;
   color: #FFFFFF;
   -webkit-transition: all 0.3s ease 0s;
@@ -2547,7 +2587,7 @@ main {
 .left__column-tel {
   font-style: normal;
   font-weight: 300;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   line-height: 150%;
   color: #FFFFFF;
   -webkit-transition: all 0.3s ease 0s;
@@ -2633,10 +2673,10 @@ main {
     font-size: 1.4rem;
   }
   .left__column-adress {
-    font-size: 1.1rem;
+    font-size: 1.4rem;
   }
   .left__column-tel {
-    font-size: 1.1rem;
+    font-size: 1.4rem;
   }
   .footer__central-column {
     display: -webkit-box;
@@ -2741,4 +2781,7 @@ main {
   .right__column-card span {
     font-size: 1.1rem;
   }
+}
+.right__lang-item-active {
+  color: #ffffff;
 }
